tests/parse-errors/issue056-expr-3.zir
fun f() {
  var i : int; 
  let s = 5 in { let t = s }; 
  i := t; 
}

let comp main = read[int] >>> write[int]
